2024-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-unique-process-name): New defun.
	(tramp-skeleton-make-process): Use it.
	(tramp-skeleton-process-file): New defmacro.

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file):
	* tramp-sshfs.el (tramp-sshfs-handle-process-file):
	Use `tramp-skeleton-process-file'.

	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process): Don't compute
	process name, this is done in `tramp-skeleton-make-process'.

2024-06-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-local-name): Adapt docstring.
	(tramp-skeleton-make-process): New defmacro.

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process):
	Use `tramp-skeleton-make-process'.

	* tramp-container.el (tramp-actions-before-shell): Don't declare.

	* tramp-sh.el (tramp-actions-before-shell):
	Add ;;;###tramp-autoload cookie.

2024-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-path): Add "/opt/homebrew/bin" and
	"/opt/homebrew/sbin".  (Bug#71235)

2024-06-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el:
	* tramp-container.el: Add myself as maintainer.

	* tramp-compat.el (connection-local-default-application):
	Define if not bound.
	(tramp-compat-connection-local-p, tramp-compat-connection-local-value):
	Use it.

2024-06-01  Dmitry Gutov  <dmitry@gutov.dev>

	* tramp.el (tramp-handle-shell-command):
	Use `async-shell-command-mode' when available.

2024-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-actions-copy-out-of-band)
	(tramp-container-no-container-regexp): Remove.  Do not register them.
	(tramp-distrobox-no-container-regexp): New defcustom.
	(tramp-enable-distrobox-method): Add it to
	`'tramp-actions-before-shell.  (Bug#71200)
