@@ -1,3 +1,8 @@
+2024-06-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-compat.el (tramp-compat-auth-info-password): Use original
+	function only for Emacs 30+.
+
 2024-06-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-get-unique-process-name): New defun.
